force-app/main/default/objects/Login_session__c/Login_session__c.object-meta.xml
<CustomObject>
    <label>Login session</label>
    <nameField>
        <displayFormat>session-{000000}</displayFormat>
        <label>Login session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>