force-app/main/default/objects/Login_session__c/fields/Office_Play__c.field-meta.xml
<CustomField>
    <fullName>Office_Play__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Play</label>
    <referenceTo>Office_Play__c</referenceTo>
    <relationshipLabel>Office Plays</relationshipLabel>
    <relationshipName>Login_sessions</relationshipName>
    <type>Lookup</type>
</CustomField>