force-app/main/default/objects/Login_session__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Login sessions</relationshipLabel>
    <relationshipName>Login_sessions</relationshipName>
    <type>Lookup</type>
</CustomField>