force-app/main/default/objects/Login_session__c/fields/Session_Ended__c.field-meta.xml
<CustomField>
    <fullName>Session_Ended__c</fullName>
    <label>Session Ended</label>
    <type>DateTime</type>
</CustomField>