force-app/main/default/objects/Login_session__c/fields/Session_Started__c.field-meta.xml
<CustomField>
    <fullName>Session_Started__c</fullName>
    <label>Session Started</label>
    <type>DateTime</type>
</CustomField>